# decentrathon-entrophia

./: .gitignore  README.md  next.config.ts  package-lock.json
app/: globals.css  layout.tsx  providers.tsx
app/admin/: page.tsx
app/asset/[id]/: page.tsx
app/marketplace/: page.tsx
app/portfolio/: page.tsx
app/submit/: page.tsx
app/verifier/: page.tsx
backend/: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
backend/docker/: docker-compose.yml
backend/docs/architecture/: bootstrap-manifest.md  domain-v1.md
backend/migrations/: deploy.mjs  init.mjs
backend/programs/receivables_program/: Cargo.toml
backend/programs/receivables_program/src/: constants.rs  lib.rs
backend/programs/transfer_hook_program/: Cargo.toml
backend/programs/transfer_hook_program/src/: constants.rs  lib.rs
backend/services/api/: README.md  (+3 more)
backend/tests/: _root.mjs
components/: activity-timeline.tsx  api-error-banner.tsx  asset-card.tsx  navigation.tsx  status-badge.tsx
frontend/: .env.example  README.md  package.json
frontend/app/: globals.css  page.tsx  providers.tsx
frontend/components/: asset-card.tsx  navigation.tsx  status-badge.tsx  tx-button.tsx
frontend/hooks/: useActiveWallet.tsx  useAuth.tsx  useRole.tsx
frontend/lib/: anchor.ts  api.ts  mock-data.ts  solana.ts
frontend/store/: demo-store.ts
frontend/types/: index.ts
hooks/: useActiveWallet.tsx  useAsset.ts  usePortfolio.ts  useRole.tsx
lib/: anchor.ts  api.ts  hash.ts  solana.ts
lib/i18n/: en.ts  ru.ts  useTranslation.ts
store/: i18n-store.ts
types/: index.ts
(+126 files in other folders)
