[package]
name = "receivables_program"
version = "0.1.0"
description = "RWA receivables core program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "receivables_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
