[package]
name = "transfer_hook_program"
version = "0.1.0"
description = "Transfer restrictions for receivables token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
